--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,11 @@
     <div class="container">
         <header>
             <a href="">
-                <div class="logo"><h1>Moto Max</h1>
+                <div class="logo">
+                    <h1>Moto Max</h1>
                 </div>
             </a>
-            <a href="tel:+48-123-123-123" >
+            <a href="tel:+48-123-123-123">
                 <strong class="desc">Zadzwoń do nas: 
 				<b class="yellow">+48 123 123 123</b>
 				</strong>
@@ -46,7 +47,7 @@
                     <h2>Oleje silnikowe</h2>
                 </div>
             </a>
-                        
+
             <a id="products__box--2" href="">
                 <div class="products__box products__box--right">
                     <div class="triangle">
@@ -55,13 +56,7 @@
                     <h2>Serwis i naprawa skuterów</h2>
                 </div>
             </a>
-<div class="products__box--show-1">Div #1 dasdas dasd a1
-                <br> sdad sad da
-                <br> sdad sad da
-                <br> sdad sad da
-                <br> sdad sad da
-                <br>
-            </div>
+
             <div class="products__box--show-2">Div #2 dsad asd asd</div>
             <a id="products__box--3" href="">
                 <div class="products__box">
@@ -71,7 +66,7 @@
                     <h2>Sprzęgłą, łożyska i pasy napędowe</h2>
                 </div>
             </a>
-                      <div class="products__box--show-3">Div #3 dsad asdas</div>
+            <div class="products__box--show-3">Div #3 dsad asdas</div>
             <a id="products__box--4" href="">
                 <div class="products__box products__box--right">
                     <div class="triangle">
@@ -80,7 +75,7 @@
                     <h2>Amortyzatory, tarcze i klocki</h2>
                 </div>
             </a>
-  
+
             <div class="products__box--show-4">Div #4 dsad asdas</div>
         </section>
     </div>
@@ -90,16 +85,16 @@
             <hr>
             <div id="map"></div>
             <div class="right">
-                <div class="button button--localization" title="Adres: " tabindex="0">ul.
+                <div class="button button--localization" title="Adres " tabindex="0">ul.
                     <strong class="yellow">Motomax 12</strong>
                 </div>
-                <a href="tel:+48-123-123-123" title="Telefon: ">
+                <a href="tel:+48-123-123-123" title="Telefon ">
                     <div class="button button--phone">
                         +48
                         <strong class="yellow">123 123 123</strong>
                     </div>
                 </a>
-                <a href="mailto:motomax@motomax.pl" title="Email: ">
+                <a href="mailto:motomax@motomax.pl" title="Email ">
                     <div class="button button--email">
                         <b class="yellow">motomax</b>@<b class="yellow">motomax.pl</b>
                     </div>
