--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                     <h2>Serwis i naprawa skuterów</h2>
                 </div>
             </a>
-
+            <div class="products__box--show-1">Div #1 XD</div>
             <div class="products__box--show-2">Div #2 dsad asd asd</div>
             <a id="products__box--3" href="">
                 <div class="products__box">
